fix: update callout colors to fix contrast issues on light mode

--- a/src/content/blog/2024-04-24-how-to-put-20k+-words-on-a-cheatsheet/index.mdx
+++ b/src/content/blog/2024-04-24-how-to-put-20k+-words-on-a-cheatsheet/index.mdx
@@ -214,8 +214,7 @@ To see the whole project in action, take a look at [typst.app/project/rbJ15a29M2
 
 [^somedifs]: Note that there are some minute differences between the code linked here and the overview below for clarity purposes.
 
-```
-PROJECT DIRECTORY:
+```txt caption="The project structure for the cheatsheet, with the main content split into 2 separate files (content.typ and lazy.typ; the latter file is for when I got, as it is written, lazy and simply began copy-pasting text from lecture slides) and the content formatting specified within the aidsheet.typ file."
 📁cheatsheet/
 ├── 📁fonts/
 ├── 📁images/
