--- a/src/content/blog/2024-08-22-work-study-at-uoft/index.mdx
+++ b/src/content/blog/2024-08-22-work-study-at-uoft/index.mdx
@@ -18,7 +18,7 @@ import d2 from './04-zoom-in.png';
 
 ## A better way to view work study job postings at UofT
 
-<Callout type="info" classes="bg-blue-950">
+<Callout type="info" classes="border-blue-950/100 bg-blue-100 dark:border-blue-100/100 dark:bg-blue-950">
   **There’s an easier to view work study jobs for this year** and you can check it out at <br></br>**<a href={`${SITE.SITEURL}/uoft-work-study-2024`}>sadman.ca/uoft-work-study-2024</a>** (preview below).
 </Callout>
 
@@ -41,7 +41,7 @@ import d2 from './04-zoom-in.png';
 
 As a student whose very first paid part-time position (that was also technically relevant to my area of study) was a work study job in my first year of post-secondary, I can attest to the value of the program, and I feel that the work experience I was able to get by work study early in my academic career helped out a ton when I was applying to internships and research opportunities later on.
 
-<Callout type="info" icon="lucide:badge-check" classes="bg-green-950">
+<Callout type="info" icon="lucide:badge-check" classes="border-green-950/100 bg-green-100 dark:border-green-100/100 dark:bg-green-950">
   With over 4000 jobs posted every year for at least the past half decade (i.e. from what I've seen since my freshman year) and a huge variety of positions, **there truly is something for everyone in the work study program.**
 </Callout>
 
@@ -192,7 +192,7 @@ So with all of those considerations at hand, it's safe to say it would be nice i
 
 I've been procrastinating on doing anything about it for the longest time though, so this summer I decided to make the most of those thoughts and design a brand-new easier-to-navigate dashboard to display the work study job postings that are visible on the official CLNx job portal right now (that is, for the 2024-2025 fall/winter semester).
 
-<Callout type="info" classes="bg-blue-950">
+<Callout type="info" classes="border-blue-950/100 bg-blue-100 dark:border-blue-100/100 dark:bg-blue-950">
   **The dashboard is live and you can view it at <a href={`${SITE.SITEURL}/uoft-work-study-2024`}>sadman.ca/uoft-work-study-2024</a>**.
 </Callout>
 
@@ -208,7 +208,7 @@ I've been procrastinating on doing anything about it for the longest time though
 
 I'll save the technical details for a future post; the gist of backend behind it is that *the raw data was scraped from the CLNx job board* and is displayed on using the incredibly performant [AG Grid library](https://www.ag-grid.com/) (with some additional customization by myself). And in many ways, **it's a lot easier to use for browsing job postings than CLNx.**
 
-<Callout type="info" classes="bg-green-950">
+<Callout type="info" classes="border-green-950/100 bg-green-100 dark:border-green-100/100 dark:bg-green-950">
   After you've taken a look at jobs on the dashboard, you can just **search for jobs you're interested by their job ID on the CLNx work study dashboard & apply to them directly** (without having to click through hundreds of job postings on CLNx).
 </Callout>
 
