--- a/src/content/blog/2024-09-10-pey-coop-jobs-at-uoft/index.mdx
+++ b/src/content/blog/2024-09-10-pey-coop-jobs-at-uoft/index.mdx
@@ -12,7 +12,7 @@ import Callout from '@/components/mdx/Callout.astro';
 import ImageGalleryCaption from '@/components/ImageGalleryCaption.astro';
 import { SITE } from '@/consts';
 
-<Callout type="info" classes="bg-blue-950">
+<Callout type="info" classes="border-blue-950/100 bg-blue-100 dark:border-blue-100/100 dark:bg-blue-950">
   Check out **<a href={`${SITE.SITEURL}/uoft-pey-coop-jobs-2023`}>sadman.ca/uoft-pey-coop-jobs-2023</a>** to view all jobs posted for the 12-16 month University of Toronto PEY Co-op program from September 2023 to June 2024.
 </Callout>
 
@@ -37,7 +37,7 @@ The Professional Experience Year (PEY) Co-op program at the University of Toront
 
 There's a decent amount of information about the PEY Co-op program available online (just check out [the program info page on discover.engineering.utoronto.ca](https://discover.engineering.utoronto.ca/experiential-learning/professional-experience-year-pey/)), along with [countless Reddit threads](https://www.google.com/search?q=uoft+pey+reddit) about the program, but **one thing that's always been unavailable is a full, comprehensive overview of the co-op positions posted on the job portal for students enrolled in the PEY program.**
 
-<Callout type="info" classes="bg-blue-950">
+<Callout type="info" classes="border-blue-950/100 bg-blue-100 dark:border-blue-100/100 dark:bg-blue-950">
   That's why I built a dashboard of all the jobs that were posted while I had access to the PEY portal at **<a href={`${SITE.SITEURL}/uoft-pey-coop-jobs-2023`}>sadman.ca/uoft-pey-coop-jobs-2023</a>**.
 </Callout>
 
