fix: asciinema embeds not loading

--- a/src/content/blog/2024-05-27-software-showcase-01-asciinema/index.mdx
+++ b/src/content/blog/2024-05-27-software-showcase-01-asciinema/index.mdx
@@ -20,7 +20,7 @@ I'm always coming across new tools, libraries, and frameworks for automating tas
   *What the average terminal session looks like for me whenever I'm trying to run some old CLI tool or executable that I haven't used for a while:*
 </Callout>
 
-<script id="asciicast-QmYHMiHpK8i7J0CZJoOxgUeDw" src="https://asciinema.org/a/QmYHMiHpK8i7J0CZJoOxgUeDw.js" data-speed="1.75" data-autoplay="false" data-loop="true" data-preload="false" data-cols="80" data-rows="8" data-size="small" async></script>
+<script id="asciicast-QmYHMiHpK8i7J0CZJoOxgUeDw" src="https://asciinema.org/a/QmYHMiHpK8i7J0CZJoOxgUeDw.js" data-speed="1.75" data-autoplay="false" data-loop="true" data-preload="true" data-cols="80" data-rows="8" data-size="small" async></script>
 
 [^includinghowto]: Including how to set things up and use them, which is something that I have to learn from scratch every time I go to set up my software workflows on yet another device and so it's something that I want to make note (and while I'm doing that, I might as well share it with everybody else)
 
@@ -47,7 +47,7 @@ Terminal session recorders, like [`asciinema`](https://github.com/asciinema/asci
 3. You can actually customize how terminal sessions look during playback by editing the recorded files or just by changing your playback settings (which means you don't have to re-record sessions for small modifications like changing font styles)
 
 *What an `asciinema` recording embedded on the web looks like:*
-<script id="asciicast-9593" src="https://asciinema.org/a/9593.js" data-speed="2.8" data-autoplay="false" data-loop="true" data-preload="false" async></script>
+<script id="asciicast-9593" src="https://asciinema.org/a/9593.js" data-speed="2.8" data-autoplay="false" data-loop="true" data-preload="true" async></script>
 **Shown:** _"Iterative git rebase with vim"_. **Source:** https://asciinema.org/a/9593.
 
 [^mentally]: Despite being constantly reminded my eyes that it's spelled "as-ciinema", I just can't pronouncing it in my head as "ascii-cinema" 😅
@@ -144,7 +144,7 @@ This command uploads a local recording to whatever URL is specified in the `ASCI
     src="https://asciinema.org/a/e5jWLa6Ey0IIyHuSLAc4Saak8"
     data-speed="3.8" data-autoplay="false"
     data-loop="true"
-    data-preload="false"
+    data-preload="true"
     data-cols="120"
     data-rows="25"
 async></script>
@@ -176,7 +176,7 @@ While the look and feel of the embedded player defaults to the original uploader
   data-poster="npt:1:23"  <!-- player preview frame timestamp -->
   data-cols="130"         <!-- terminal width -->
   data-rows="10"          <!-- terminal height -->
-  data-preload="false"
+  data-preload="true"
   async>
 </script>
 ```
