--- a/src/content/posts/2020-11-09-why-i-use-trello/index.mdx
+++ b/src/content/posts/2020-11-09-why-i-use-trello/index.mdx
@@ -7,6 +7,8 @@ tags: ['productivity', 'tools']
 authors: ['sadman']
 ---
 
+import { Image } from "@unpic/astro";
+
 ## To Have a 'To-Do' List is To Be Human
 
 **Everybody needs a system for making their to do lists.**
@@ -19,7 +21,13 @@ It doesn't matter if it's a bullet journal or some fancy system built in Jira or
 
 Trello is a (free!) visual project management tool that is based on the kanban system of getting things done. In Trello, the overarching unit used is the board. Each board contains a series of lists, each  with a bunch of cards attached. You can easily drag and drop cards between lists, and even send or copy cards (and lists themselves) between boards.
 
-![Trello Kanban System](./1_trello_drag_drop.gif)
+import trellokanban from './1_trello_drag_drop.gif';
+
+<Image
+  src={trellokanban}
+  layout="constrained"
+  alt="Trello Kanban System]"
+/>
 
 If we left it at that, Trello would've been a nice, simple tool for building to do lists. But it gets better.
 
@@ -27,13 +35,25 @@ If we left it at that, Trello would've been a nice, simple tool for building to 
 
 Within each card, you have a smorgasbord of options. You can add a description, a due date, a series of checklists (that’s right, folks, you get lists within lists), colourful labels, and so much more. You  an share boards between people and assign them to different cards, allowing you to use Trello as a simple to do list but offering the flexibility of more for complex projects.
 
-![Within Cards](./2_within_cards.gif)
+import withincards from './2_within_cards.gif';
+
+<Image
+  src={withincards}
+  layout="constrained"
+  alt="Within Cards]"
+/>
 
 ### How I Use It
 
 There’s no strict rules regarding how you need to use Trello. Personally, I try to keep the number of boards I use limited and instead focus on organizing my life into boards that sometimes overlap with each other. For example, I have a board exclusively for schoolwork, which has some cards integrated from my side projects board so I can keep track of everything on my to-do list and avoid having tasks fall into the cracks of my schedule. I also have boards for various extracurriculars, making keeping track of them a much more smooth process than before I used Trello.
 
-![How I Use It](./3_how_i_use_it.png)
+import howIUseIt from './3_how_i_use_it.png';
+
+<Image
+  src={howIUseIt}
+  layout="constrained"
+  alt="How I Use It"
+/>
 
 ### Power(ing)-Up
 
@@ -41,6 +61,12 @@ While Trello has a couple paid tiers, the free version is going to be enough for
 
 Some examples of Power-Up functionality include showing due dates on a calendar (which can be synced with your calendar software of choice), showing the number of days left before a due date (I use this a lot) integrations with cloud services like Google Drive, and so much more. Unfortunately, you’re only allowed 1 Power-Up per board with the free version.
 
-![Power-Ups](./4_power_ups.gif)
+import powerups from './4_power_ups.gif';
+
+<Image
+  src={powerups}
+  layout="constrained"
+  alt="Power-Ups"
+/>
 
 Even with only a single Power-Up, Trello is an absolute banger of a tool to use if you’re looking for something that can help you organize everything, from your Mom’s birthday to your projects at work, in one place. A lot of tools try to do everything at once, and end up doing mediocre at best for whatever they try to do. Trello is an example of the rare tool that pulls it off.
