fix: remove unpic to fix build errors

--- a/src/content/posts/2020-11-09-why-i-use-trello/index.mdx
+++ b/src/content/posts/2020-11-09-why-i-use-trello/index.mdx
@@ -7,7 +7,7 @@ tags: ['productivity', 'tools']
 authors: ['sadman']
 ---
 
-import { Image } from "@unpic/astro";
+import { Image } from 'astro:assets';
 
 ## To Have a 'To-Do' List is To Be Human
 
