--- a/src/content/posts/2020-11-09-why-i-use-trello/index.mdx
+++ b/src/content/posts/2020-11-09-why-i-use-trello/index.mdx
@@ -26,7 +26,7 @@ import trellokanban from './1_trello_drag_drop.gif';
 <Image
   src={trellokanban}
   layout="constrained"
-  alt="Trello Kanban System]"
+  alt="A kanban board with cards in Trello"
 />
 
 If we left it at that, Trello would've been a nice, simple tool for building to do lists. But it gets better.
@@ -40,7 +40,7 @@ import withincards from './2_within_cards.gif';
 <Image
   src={withincards}
   layout="constrained"
-  alt="Within Cards]"
+  alt="Trello card options including description, due date, checklists, labels, and more"
 />
 
 ### How I Use It
@@ -52,7 +52,7 @@ import howIUseIt from './3_how_i_use_it.png';
 <Image
   src={howIUseIt}
   layout="constrained"
-  alt="How I Use It"
+  alt="Example of using Trello to organize schoolwork, side projects, and extracurricular activities"
 />
 
 ### Power(ing)-Up
@@ -66,7 +66,7 @@ import powerups from './4_power_ups.gif';
 <Image
   src={powerups}
   layout="constrained"
-  alt="Power-Ups"
+  alt="Examples of Trello Power-Ups including calendar integration, due date countdowns, and cloud service integrations"
 />
 
 Even with only a single Power-Up, Trello is an absolute banger of a tool to use if you’re looking for something that can help you organize everything, from your Mom’s birthday to your projects at work, in one place. A lot of tools try to do everything at once, and end up doing mediocre at best for whatever they try to do. Trello is an example of the rare tool that pulls it off.
