update astro to 5.0 and fix breaking changes with astro:content

--- a/src/content/posts/2024-09-10-pey-coop-jobs-at-uoft/index.mdx
+++ b/src/content/posts/2024-09-10-pey-coop-jobs-at-uoft/index.mdx
@@ -13,14 +13,14 @@ import ImageGalleryCaption from '@/components/ImageGalleryCaption.astro';
 import { SITE } from '@/consts';
 
 <Callout type="info" classes="border-blue-950/100 bg-blue-100 dark:border-blue-100/100 dark:bg-blue-950">
-  Check out **<a href={`${SITE.SITEURL}/uoft-pey-coop-jobs-2023`}>sadman.ca/uoft-pey-coop-jobs-2023</a>** to view all jobs posted for the 12-16 month University of Toronto PEY Co-op program from September 2023 to June 2024.
+  Check out **<a href={`${SITE.SITEURL}/uoft-pey-coop-jobs-2023.html`}>sadman.ca/uoft-pey-coop-jobs-2023</a>** to view all jobs posted for the 12-16 month University of Toronto PEY Co-op program from September 2023 to June 2024.
 </Callout>
 
 The job portal for current PEY Co-op students **opens this September 16**, so if you're...
 - a 3rd year student looking to get a head start on preparing your applications for specific positions/companies, or
 - a prospective student who wants to explore what types of jobs are posted (and what companies post co-op jobs)...
 
-...then check out **<a href={`${SITE.SITEURL}/uoft-pey-coop-jobs-2023`}>sadman.ca/uoft-pey-coop-jobs-2023</a>**.
+...then check out **<a href={`${SITE.SITEURL}/uoft-pey-coop-jobs-2023.html`}>sadman.ca/uoft-pey-coop-jobs-2023</a>**.
 
 It has all the co-op/internship jobs posted for the 12-16 month University of Toronto PEY Co-op program from September 2023 to June 2024 (scraped by yours truly).
 
@@ -38,7 +38,7 @@ The Professional Experience Year (PEY) Co-op program at the University of Toront
 There's a decent amount of information about the PEY Co-op program available online (just check out [the program info page on discover.engineering.utoronto.ca](https://discover.engineering.utoronto.ca/experiential-learning/professional-experience-year-pey/)), along with [countless Reddit threads](https://www.google.com/search?q=uoft+pey+reddit) about the program, but **one thing that's always been unavailable is a full, comprehensive overview of the co-op positions posted on the job portal for students enrolled in the PEY program.**
 
 <Callout type="info" classes="border-blue-950/100 bg-blue-100 dark:border-blue-100/100 dark:bg-blue-950">
-  That's why I built a dashboard of all the jobs that were posted while I had access to the PEY portal at **<a href={`${SITE.SITEURL}/uoft-pey-coop-jobs-2023`}>sadman.ca/uoft-pey-coop-jobs-2023</a>**.
+  That's why I built a dashboard of all the jobs that were posted while I had access to the PEY portal at **<a href={`${SITE.SITEURL}/uoft-pey-coop-jobs-2023.html`}>sadman.ca/uoft-pey-coop-jobs-2023</a>**.
 </Callout>
 
 As a UofT engineering student who started their 3rd year last fall (and went through the whole job viewing/application process on the PEY portal), this was probably the part of the program that I was the most curious about going into it, so this is my way of making sure that future students have a better idea of what to expect when they go through the PEY Co-op program.
