style: update font sizes

--- a/src/content/posts/2024-08-22-work-study-at-uoft/index.mdx
+++ b/src/content/posts/2024-08-22-work-study-at-uoft/index.mdx
@@ -35,7 +35,7 @@ import d2 from './04-zoom-in.png';
   While work study job postings on CLNx disappear if you don't view them before their respective application deadline, their data is archived on the dashboard so *they remain visible even after their application deadline passes*.
 </Callout>
 
-## Work Study: (Underappreciated) Part-time <br></br>Employment for Students
+## Work Study: (Underappreciated) Part-time Employment for Students
 
 **The work study job program at the University of Toronto (UofT) is an amazing resource for students to get part-time work during their studies**, but I'm surpised at how many fellow students aren't aware of it (many of them first years) or aren't familiar with the breadth of job opportunities offered.
 
