--- a/src/content/posts/2024-09-10-pey-coop-jobs-at-uoft/index.mdx
+++ b/src/content/posts/2024-09-10-pey-coop-jobs-at-uoft/index.mdx
@@ -45,7 +45,7 @@ As a UofT engineering student who started their 3rd year last fall (and went thr
 
 ## The gaps this dashboard aims to fill
 
-### Who's hiring
+### Who's hiring?
 
 There's a fair amount of talk in UofT circles (and on the PEY program's informative web pages) about what some of the biggest PEY Co-op employers are (e.g. AMD, Intel, etc.), but as a student it can still feel apprehensive if you're not aware of approximate numbers or ballpark figures of how many students you can expect different companies to hire.
 
@@ -65,7 +65,7 @@ Personally I was quite surprised at the number of hardware development positions
 
 ### Data that isn't available on the official PEY portal
 
-Finally, one last thing I want to mention is that each job posting on the dashboard has an additional field that *isn't available on the PEY portal*: **the date that each job was posted.**
+Finally, one last thing I want to mention is that each job posting on the dashboard has an additional field that *isn't available on the PEY portal:* **the date that each job was posted.**
 
 This is something that I think is very important for students to know about, as it can give you a sense of how the open pool of jobs available at any point in time changes over the course of the fall and winter semesters.
 
