feat: use ImageZoom for all images

--- a/src/content/posts/2024-04-24-how-to-put-20k+-words-on-a-cheatsheet/index.mdx
+++ b/src/content/posts/2024-04-24-how-to-put-20k+-words-on-a-cheatsheet/index.mdx
@@ -4,13 +4,15 @@ description: "The art of maximizing content on a cheatsheet while maintaining re
 date: 2024-04-24
 slug: "how-to-put-20k+-words-on-a-cheatsheet"
 tags: ['university', 'code', 'python', 'typst']
-image: 'public/posts/2024-04-24-how-to-put-20k+-words-on-a-cheatsheet/00-thumbnail.png'
+image: './00-thumbnail.png'
 authors: ['sadman']
 ---
 
 import ImageGallery from '@/components/ImageGallery.astro';
+import ImageGalleryCaption from '@/components/ImageGalleryCaption.astro';
 import PdfViewer from '@/components/PdfViewer.astro';
 import Callout from '@/components/mdx/Callout.astro';
+import ImageZoom from '@/components/mdx/ImageZoom.astro';
 
 # Setting the stage
 
@@ -20,14 +22,16 @@ Except... when the opportunity does arise, it's usually for a course where the l
 
 The answer is surprisingly simple. But to get there, there's 3 things we need to consider: the medium (*how* to write your cheatsheet), the message (*what* to write on it), and the machine (*how* to print it such that everything remains readable).
 
-
 <Callout type="info">
   Oh, and if you're looking to take a peek at what exactly we're going to learn how to make, well, **here's an example in it's full glory:**
 </Callout>
 
-<ImageGallery images={[
-  '/posts/2024-04-24-how-to-put-20k+-words-on-a-cheatsheet/01-fullpage.png',
-  '/posts/2024-04-24-how-to-put-20k+-words-on-a-cheatsheet/01-zoomed.png',
+import fullpage from './01-fullpage.png'
+import zoomed from './01-zoomed.png'
+
+<ImageGalleryCaption images={[
+  { src: fullpage, caption: "Full page view of cheatsheet" },
+  { src: zoomed, caption: "Zoomed in view of cheatsheet" },
 ]} columns={2} />
 
 Alas, putting together a behemoth of a cheatsheet like this one takes a while. It's an intricate process that involves making a number of decisions, the first of which is selecting the best tool for the job.
@@ -70,9 +74,12 @@ On that last point, I took a quick search on Github[^gh] for any LaTeX cheatshee
 
 *A decent-looking LaTeX cheatsheet, albeit one that isn't necessarily the best use of space and is an absolute \*pain\* to edit in LaTeX. Source: [https://wch.github.io/latexsheet](https://wch.github.io/latexsheet)*
 
-<ImageGallery images={[
-  'https://wch.github.io/latexsheet/latexsheet-0.png',
-  'https://wch.github.io/latexsheet/latexsheet-1.png',
+import latexsheet0 from './latexsheet-0.png'
+import latexsheet1 from './latexsheet-1.png'
+
+<ImageGalleryCaption images={[
+  { src: latexsheet0, caption: "Front page: sample LaTeX cheatsheet" },
+  { src: latexsheet1, caption: "Back page: sample LaTeX cheatsheet" },
 ]} columns={2} />
 
 ```latex
@@ -158,9 +165,12 @@ Another key characteristic of Typst is that you don't need any complicated templ
 
 And what's brilliant about all of this, is that the Typst team have been generous enough to build a fully functional web application ([typst.app](https://typst.app)) to only store your Typst project files, but also edit them with dynamically updating previews and all sorts of bits and bobs to make your Typst writing experience oh-so-sweet (probably my favourite feature is the ability to not only click on some text or box in the output PDF preview and be immediately directed to the line of Typst markup that's generating that specific output but also, with a line of code selected, jump and zoom in directly to the specific page and portion of the generated PDF that the markup is creating; remember this for later, because it comes in incredibly handy when you're writing text at a size that's on par with some smaller species of ants). [typst.app](https://typst.app) is to Typst as [overleaf.com](https://overleaf.com) is to LaTeX (except the Typst web app is so much better than Overleaf that the folks over at Overleaf actually copied their "new" landing page design to mimic Typst's, which I'm not too surprised about given just how much better Typst is to use).
 
-<ImageGallery images={[
-  '/posts/2024-04-24-how-to-put-20k+-words-on-a-cheatsheet/02-typst.jpg',
-  '/posts/2024-04-24-how-to-put-20k+-words-on-a-cheatsheet/02-overleaf.jpg',
+import typst from './02-typst.jpg'
+import overleaf from './02-overleaf.jpg'
+
+<ImageGalleryCaption images={[
+  { src: typst, caption: "Landing page: Typst" },
+  { src: overleaf, caption: "Landing page: Overleaf" },
 ]} columns={2} />
 
 It's awe-inspiring to think of just how powerful Typst is given how easy it is to use as well, making it a fantastic option not just for writing cheatsheets but for replacing LaTeX for a ridiculous number of purposes (as for myself, I now exclusively use Typst to typeset pretty much any PDF requiring math notation, which at the time of writing is pretty much just relegated to homework assignments for calculus/algorithms/data structures/database design courses). But we're here to figure out how to write a kickass cheatsheet, so let's get to it.
@@ -185,7 +195,12 @@ As someone who's been writing cheatsheets over half a decade now, I've made this
 
 For a good example at what not to do, consider my cheatsheet (below) for an [introductory digital logics course](https://engineering.calendar.utoronto.ca/course/ece241h1) from my second year of university. I can hardly distinguish the different groups of concepts amongst all the differently sized blocks of diagrams mixed in with text, and I was the one who wrote the entire darn thing, I can only imagine how you, dear reader, must feel looking at this spagetthi gobble of a cheatsheet.
 
-![A cheatsheet for an introductory digital logics course, which is a complete mess of different sized blocks of diagrams mixed in with text.](/posts/2024-04-24-how-to-put-20k+-words-on-a-cheatsheet/03-ece241.jpg)
+import ece241 from './03-ece241.jpg'
+
+<figure>
+  <ImageZoom src={ece241} alt="My cheatsheet for an introductory digital logics course, which is a complete mess of different sized blocks of diagrams mixed in with text." class="rounded-xl"/>
+  <figcaption>My cheatsheet for an introductory digital logics course, which is a complete mess of different sized blocks of diagrams mixed in with text.</figcaption>
+</figure>
 
 How do we maintain uniformity with incredibly tiny text? Well, for starters, stick with a consistent method of structuring your content. The best way of doing this, regardless of whether you're using some typesetting engine or a text editor, is with a table. Ideally, a single table that fills up the entire page (so you don't have to deal with all the spacing headaches trying to properly sandwich together multiple tables of different sizes onto the same 8.5x11 inch sheet of paper) with consistently sized rows and columns. In addition, go with justified or centre-aligned text instead of left/right-aligned (having straight edges for text boxes is a lot easier to read than text boxes with jagged edges that have no easily parseable pattern)
 
@@ -199,10 +214,13 @@ Which means you should have small widths for columns, such that all you need to 
 
 #### Group related content together
 
+import stint from './04-stint.jpg'
+
 - Highlight terms while leaving their definitions as plain text so that you can look into a sea of text and quickly see whether the term you're looking for is even present at all first.
 - Break up multi-layered content by using multiple levels of formatting for your headings, subheadings, definitions, sub-definitions, and so on.
-  - Also have separate fonts for important terms, plaintext, and special text (e.g. code, math); ensure that all work well at small scales (adjustments to character and word spacing can luckily be made by Typst, which means all you need to do is focus on readability; you can fit more characters of a thin font in the same space of whitespace compared to a wider font, so keep that in mind and maybe don't select something as wide as [Stint Ultra Expanded](https://fonts.google.com/specimen/Stint+Ultra+Expanded): ![A cheatsheet for an introductory digital logics course, which is a complete mess of different sized blocks of diagrams mixed in with text.](/posts/2024-04-24-how-to-put-20k+-words-on-a-cheatsheet/04-stint.jpg)
+  - Also have separate fonts for important terms, plaintext, and special text (e.g. code, math); ensure that all work well at small scales (adjustments to character and word spacing can luckily be made by Typst, which means all you need to do is focus on readability; you can fit more characters of a thin font in the same space of whitespace compared to a wider font, so keep that in mind and maybe don't select something as wide as [Stint Ultra Expanded](https://fonts.google.com/specimen/Stint+Ultra+Expanded)): <br/><br/><ImageZoom src={stint} alt="Font sample: Stint Ultra Expanded."/>
 - Have some method of clearly separating unrelated content (that minimizes use of whitespace, like a dotted line).
+
 
 ### Other things to keep in mind
 
