--- a/src/content/posts/2024-08-22-work-study-at-uoft/index.mdx
+++ b/src/content/posts/2024-08-22-work-study-at-uoft/index.mdx
@@ -10,6 +10,7 @@ authors: ['sadman']
 
 import Callout from '@/components/mdx/Callout.astro';
 import ImageGalleryCaption from '@/components/ImageGalleryCaption.astro';
+import ImageZoom from '@/components/mdx/ImageZoom.astro';
 import { Image } from 'astro:assets';
 import { SITE } from '@/consts'
 
@@ -19,11 +20,11 @@ import d2 from './04-zoom-in.png';
 ## A better way to view work study job postings at UofT
 
 <Callout type="info" classes="border-blue-950/100 bg-blue-100 dark:border-blue-100/100 dark:bg-blue-950">
-  **There’s an easier to view work study jobs for this year** and you can check it out at <br></br>**<a href={`${SITE.SITEURL}/uoft-work-study-2024.html`}>sadman.ca/uoft-work-study-2024</a>** (preview below).
+  **There’s an easier to view work study jobs for this year** and you can check it out at **<a href={`${SITE.SITEURL}/uoft-work-study-2024.html`}>sadman.ca/uoft-work-study-2024</a>** (preview below).
 </Callout>
 
 <figure>
-  <Image src={d1} alt="Redesigned UofT work study job postings dashboard" class="rounded-xl"/>
+  <ImageZoom src={d1} alt="Redesigned UofT work study job postings dashboard" class="rounded-xl"/>
   <figcaption>Redesigned UofT work study job postings dashboard at <a href="{`${SITE.SITEURL}/uoft-work-study-2024.html}">sadman.ca/uoft-work-study-2024</a>.</figcaption>
 </figure>
 
@@ -154,7 +155,7 @@ import i2 from './03-clnx-job-page.jpg';
 import job_description_page from './03-example-job.png';
 
 <figure>
-  <Image src={job_description_page} alt="What a job description page looks like on CLNx" class="rounded-xl"/>
+  <ImageZoom src={job_description_page} alt="What a job description page looks like on CLNx" class="rounded-xl"/>
   <figcaption>What a job description page looks like on CLNx.</figcaption>
 </figure>
 
@@ -197,12 +198,12 @@ I've been procrastinating on doing anything about it for the longest time though
 </Callout>
 
 <figure>
-  <Image src={d1} alt="Redesigned UofT work study job postings dashboard" class="rounded-xl"/>
+  <ImageZoom src={d1} alt="Redesigned UofT work study job postings dashboard" class="rounded-xl"/>
   <figcaption>Redesigned UofT work study job postings dashboard at <a href={`${SITE.SITEURL}/uoft-work-study-2024.html`}>sadman.ca/uoft-work-study-2024</a>.</figcaption>
 </figure>
 
 <figure>
-  <Image src={d2} alt="Zoomed-in view of redesigned UofT work study job postings dashboard" class="rounded-xl"/>
+  <ImageZoom src={d2} alt="Zoomed-in view of redesigned UofT work study job postings dashboard" class="rounded-xl"/>
   <figcaption>**Zoomed-in view.** Redesigned UofT work study job postings dashboard at <a href={`${SITE.SITEURL}/uoft-work-study-2024.html`}>sadman.ca/uoft-work-study-2024</a>.</figcaption>
 </figure>
 
