--- a/src/content/posts/2024-08-22-work-study-at-uoft/index.mdx
+++ b/src/content/posts/2024-08-22-work-study-at-uoft/index.mdx
@@ -25,7 +25,7 @@ import d2 from './04-zoom-in.png';
 
 <figure>
   <ImageZoom src={d1} alt="Redesigned UofT work study job postings dashboard" class="rounded-xl"/>
-  <figcaption>Redesigned UofT work study job postings dashboard at <a href="{`${SITE.SITEURL}/uoft-work-study-2024.html}">sadman.ca/uoft-work-study-2024</a>.</figcaption>
+  <figcaption>Redesigned UofT work study job postings dashboard at <a href={`${SITE.SITEURL}/uoft-work-study-2024.html`}>sadman.ca/uoft-work-study-2024</a>.</figcaption>
 </figure>
 
 <Callout type="flag">
