--- a/src/content/posts/2025-01-25-uoft-ece-upper-year-course-planning-tips/index.mdx
+++ b/src/content/posts/2025-01-25-uoft-ece-upper-year-course-planning-tips/index.mdx
@@ -1,8 +1,8 @@
 ---
-title: "How to plan your upper-year UofT ECE courses using Magellan"
-description: "My favourite TV shows and movies of 2024 (and others)."
+title: "Course reviews for upper-year UofT ECE courses"
+description: "What upper-year courses you should take as a UofT ECE student (and what to watch out for when planning on Magellan)."
 date: 2025-01-25
-slug: "uoft-ece-upper-year-course-planning-tips"
+slug: "uoft-ece-upper-year-reviews"
 tags: ['university', 'education', 'advice']
 image: './00-thumbnail.png'
 authors: ['sadman']
@@ -15,68 +15,231 @@ import ImageZoom from '@/components/mdx/ImageZoom.astro';
 import { Image } from 'astro:assets';
 import { SITE } from '@/consts';
 
-## You should go to Magellan 101
+I've taken a lot of courses from my time in UofT ECE (most of them were about software, some of them were not). If you're a budding ECE student (or someone in 3rd year) trying to figure out what courses to take (or perhaps when to take them), then you might find the following descriptions helpful for planning out the rest of your degree.
 
-It's finally that time of the (school) year: the deadline to select your courses next year for 2nd/3rd year students in electrical & computer engineering (ECE) at the University of Toronto (UofT) is fast approaching (*January 30th at 11:59pm!*), and you're still not quite sure on what you should take.
+## Who this page is for
 
-**Magellan 101** is one of the events that the ECE Club at UofT hosts every year for upper year students like me to give course advice, and I'm actually volunteering to speak in this year's session so I thought I might as well take ~~pen to paper~~ keyboard to screen and write down everything I'd like to say.
+  - 2nd and 3rd year ECE students trying to figure out what courses they should take on Magellan
+  - 1st year ECE students and potential applicants trying to figure out what they can learn from their degree
 
-Which is why (if you haven't attended a previous session already) you should probably head to the Magellan 101 session is this Tuesday, so if you're a second year student looking to get some advice on .
-
-I'll be there volunteering, so if there's any questions.
-
-### Info for the uninitiated
-
-Magellan is a tool that UofT ECE students use to plan their courses. It's a bit of a pain to use, but it's the only way to *officially* plan your courses (i.e. **guarantee** that you'll be enrolled in your selected ECE courses), which pretty much leaves you no choice (unless you're willing to run the gauntlet that is waking before 6am the day course enrolment opens on Acorn and then dealing with the lag from several thousand students absolutely annihilating the poor probably-decade-old mainframe hosting the course enrolment service at the university; note you'll still need to wake up at dawn this for your non-ECE courses in the summer, so it won't save you entirely from that pain). 
-
-You can check out Magellan at [here](https://magellan.ece.utoronto.ca/).
-
-## The basics of course enrolment 
-
-Alright, let's get the boring technical stuff out of the way first.
-
-The ECE curriculum at UofT is divided into 6 areas:
-
-
-### Graduation requirements
-
-To graduate from ECE at UofT you need to have taken:
-
-- All your 1st and 2nd year courses
-- Breadth requirement: 4 kernel courses from 4 different areas
-- Depth requirement: 2 courses from 2 of the areas where you took a kernel course
-- 3 technical electives
-- 1 science elective
-- 4 complementary studies (HSS) electives -- of which at least are 2 humanities and social sciences (HSS) electives
-- The engineering economic analysis & entrepreneurship course (ECE472)
-- 4th year capstone design project course
-- A free elective (literally any course at UofT that you are able to take, including non-engineering courses)
-
-<Callout type="info">
-  You'll also need 600 hours of practical work experience to graduate, but if you're in the PEY Co-op program (or even just working over the summer) then you'll reach those hours with no trouble at all.
+<Callout type="info" classes="border-grey-950/100 bg-grey-100 dark:border-grey-100/100 dark:bg-grey-950">
+  *Disclaimer:* I'm a software guy, which means that when it comes to ECE courses at UofT my interests lie solely in areas 6 (computer software) and 5 (computer hardware and computer networks). I've gone through almost all the area 6 courses and some of the area 5 courses so I can speak about them at length (along with some others), but if you're interested in more of the electrical and hardware side of things I strongly recommend reaching out to students who have taken those courses (on Discord, LinkedIn, on-campus) and learn from them firsthand about what they're like.
 </Callout>
 
-## General tips
+<Callout type="destructive">
+  *This page is currently still under construction!*
 
-### Do the courses you care about first
+  Check back on January 29 for any incomplete course reviews.
+</Callout>
 
-If you're interested in a course, take it. Don't worry about whether it's a kernel course or not, or whether it's in the area you're interested in. You're going to be spending a lot of time on these courses, so you might as well enjoy them.
+<hr/>
 
-## Course selection by area
+## Operating Systems (ECE344)
 
-As a software guy, my interests and experiences really only stretch as far as areas 5 (computer hardware & computer networks) and 6 (software), so I'll be focusing on those areas in this post.
+### TL;DR
 
-However, I've been able to gather some information on the other areas from friends and upper year students, so I'll try to include that information as well below.
+ECE344 is probably my favourite course from all of undergrad. I learned a ton (as a software engineer it was invaluable), and I had an amazing time while doing so. The labs are more than fair (they're *satisfying* to do), and the current course coordinator (in the fall) Jon Eyolfson is the gold standard for teaching engineering/computer science courses (I don't think I've ever seen a RateMyProf rating as high as unanimously positive as Eyolfsons; he literally puts all his content, lecture recordings, labs, midterm/exam and all on his website, it's truly amazing). 
 
-## Software (Area 6)
+### What you learn
 
-### Operating Systems (ECE344)
+How operating systems (primarily Linux) work and are designed. Includes concepts like how an OS is able to run multiple applications (processes) at the same time, how applications can interact with OS, CPU scheduling, file systems, memory management, multithreading. 
 
-ECE344 is probably my favourite course from all of undergrad. It's an introduction 
+It's cool stuff, you might've touched on this content in some way or shape on the past, but you'll learn it all from first principles in ECE344 which is very nice because you get to build a bigger picture of how it all connects together. 
 
-It's a kernel course, a must-have for anyone working in the software space, and also one of my favourite courses from undergrad. 
+### What you do
 
+In the labs you'll write code (in C) that either interfaces with the OS or acts as part of an OS, so the overall practical aspect is lower level than the pure application level coding you'll have done in APS105 Computer Fundamentals/ECE244 Programming Fundamentals/ECE297 Software Design and Communication but is higher level than the assembly you'd have written in ECE243 Computer Organization (which itself is one level higher than the Verilog written in ECE241 Digital Logic).
 
-You'll learn
+### When to take it
 
-## Area 5: Computer Hardware & Computer Networks
+Take it in the fall when Jon Eyolfson is teaching. Ding Yuan coordinates the course in the winter, and his labs are waaay harder and longer than Eyolfson's labs in the fall. Not only that, but in the winter they're done in partners (labs are individual in the fall), they build off of each other so missing the deadline or screwing up for one lab will seriously hinder you for the next lab (labs in the fall are more or less self-contained, although the types of code you'll write in them will repeat), and if you're doing interviews for software internships for your PEY co-op then you'll be much better prepared having taken the course in the fall than in the winter (where you'll most likely land a position, good or not, before you even finish the course). Until such time as the course coordination changes again (and believe me, people will very clearly let you know what to do then), take ECE344 in the fall, especially if you're not a software guy, you do not to go through the pain of taking it in the winter when taking it in the fall is a so much better experience.
+
+<hr/>
+
+## Algorithms & Data Structures (ECE345)
+
+### TL;DR
+
+ECE345 is far from my favourite course, but it's an important one if you're going to be working in the software (primarily for interviews, but obviously it comes in handy on the job). 
+
+### What you learn
+
+Basic discrete math for algorithmic analysis (time complexity and space efficiency), data structures, algorithms (graphs, greedy, dynamic programming). Basically your typical data structures and algorithms course, so you can learn from any of the resources on the internet (shout out to Abdul Bari). 
+
+Note that you won't actually be doing any coding in this course (other than the homework labs if you take it in the winter), rather you'll be writing pseudocode to describe algorithms (focusing on semantics instead of syntax).
+
+### What you do
+
+In the fall, you can expect biweekly homework assignments done in groups of 3. they're not overly complex, usually a mix of simple problems you can solve directly using the course concepts and slightly harder problems where you'll need to think for a bit in order to figure out what to do. other than that the course has practically no work, which is nice but does mean that it is easier to procrastinate on keeping up with the content (which you absolutely should be doing because the midterm and final are far from trivial, you need to know the course concepts and need to be actively practicing using them, solving those problems requires being able to recognize what concept you need to apply and how, which largely comes from said practice).
+
+### When to take it
+
+Take it in fall for the better lectures, overall better organization, and to help you prepare for software interviews. if you don't care about any of that and just want to take it to fulfill your kernel requirements then you'll be fine in the winter since the assessments stay largely the same, but the course is definitely better experienced in the fall. 
+
+<Callout type="info" classes="border-grey-950/100 bg-grey-100 dark:border-grey-100/100 dark:bg-grey-950">
+  *A large number of people typically take ECE344, ECE345, and ECE302 together* (ECE302 largely so they can take ECE361 in the same or following semester). As someone who did the same thing, I can recommend it because it will mean you get to see a large part of your year's cohort in those courses and they are very sensible choices that set you up with the prequisites for taking some of the other more interesting courses.
+</Callout>
+
+<hr/>
+
+## Introduction to Databases (CSC343)
+
+### TL;DR
+
+CSC343 is a great course for developing a solid foundation in relational databases, and I can highly recommend it. The content is interesting (if you learn SQL by yourself you will definitely not learn it to the same rigor as in this course), not too difficult, and it's also fairly easy to get a high mark so it's a nice GPA booster as well (ignore any older reviews on the internet calling the course "extremely bird", it's no longer that ridiculously easy but it's still on the easier side of things compared to other courses). Lectures are recorded, the homework assignments are tedious but not overly difficult, and the midterm/final have been the exact same format for the past decade so it's very easy to study for them.  
+
+### What you learn
+
+Relational algebra, querying and updating databases using SQL (PostgreSQL and psycopg2 in Python), database design (integrity constraints, normal forms), database system technology (querying processing, transaction management).
+
+### What you do
+
+A few homework assignments with a mix of writing relational algebra and Python/PotgreSQL code. The midterm and final for CSC343 are the easiest to study for because the format has stayed the same for the past decade or so and as a result there's a lot of practice material available (which means that studying for this course is almost trivial, excepting some slightly tricky concepts). There are some very good lecture notes by students that can be found by searching for CSC343 on GitHub and Google, I highly recommend using those because they're good enough that other than those you only really need to write notes for how to solve some specific types of problems (some using code from the homework assignments) and you'll be absolutely fine.
+
+### When to take it
+
+The course is virtually identical in both fall and winter, so you have the freedom of selecting which semester is best for you to take it. Some co-op positions (e.g. fullstack) will value experience with databases so it can be a handy course to have for interviews. For other positions it won't be of much value beyond being good to know.
+
+<hr/>
+
+## Computer Security (ECE568)
+
+### TL;DR
+
+There have been a lot of good things said about this course on the internet, but in my opinion it's just alright, it's not bad but it's also nothing exceptional. I would recommend taking it if you have the space and need a medium difficulty course, it's not too difficult to get a good mark but it does require that you spend the time to figure out buffer overflows.
+
+### What you learn
+
+How to identify security vulnerabilities and how they can be exploited (high level concepts as well as what you need to do in C code; this part is especially important for some of the "simpler" attacks like buffer overflows because they will 100% show up in some form in the midterm and final), how to defend against computer security attacks, cryptography and encryption (including over the web) with lots of acronyms you might have heard of but don't really know what they do in depth (e.g. MAC, SSL, CORS, MITM, federated identity, etc.), blockchain.
+
+### What you do
+
+Other than 4-5 labs that don't take too long, this course has practically no workload other than studying, it's really the first lab that takes the longest because you have to figure out how to use gdb to be able to see values on the stack (which is quite cool if you've never done it before) but you're not taught how to do and if this do you have to figure out on your own. In addition, the first labs are all about executing buffer overflow attacks on some short code samples (in C) and they take some critical thinking to figure out (the solution is always really short but getting there takes a while). The concepts used in lab 1 however (buffer overflow, format string, double-free attacks) are the most important out of all the labs (the others focus on a bit of web and application security, so you'll be working with Python and Javascript; the other labs are a lot simpler though, you're not writing more than a couple lines of code for any lab). But if you can get that down then you'll be totally fine, the midterm in Winter 2023 had a really high average and the final wasn't that bad either (final course average was a B+).
+
+### When to take it
+
+The course is virtually identical in both fall and winter, so you have the freedom of selecting which semester is best for you to take it. Some co-op positions (e.g. fullstack) will value experience with databases so it can be a handy course to have for interviews. For other positions it won't be of much value beyond being good to know.
+
+<hr/>
+
+## Programming Languages (ECE326)
+
+### TL;DR
+
+This course is one of the least useful out of all those offered in area 6 (and I'm including that new quantum computing course and ece444 which is ridiculously easy too), I don't really recommend it because it's a mishmash of a bunch of different concepts in computing like functional programming, Haskell, Prolog, and some OOP. The positions where this comes in handy are a small minority of all those out there, and especially so if you're looking for co-op positions. Even if you've taken every single course in area 6. The only saving grace of this course (and why you might consider taking it) is that you can get a high mark in it fairly easily. Disclaimer though: no professor who's taught the course has stayed beyond a single semester for like the past 3 years (dear god, I have stories of this one prof named Subhendu Bhadra), so teaching ability is very much a variable thing (although you can probably expect it to be substandard). If you really want to learn the content in this course, google the syllabus, look at the notes, and just search up the content on YouTube. And take a different course in undegrad instead.
+
+<hr/>
+
+## Distributed Systems (ECE419)
+
+### TL;DR
+
+The course was completely overhauled this year by Ashvin Goel after being practically identical for the past 15 years. You can find the new syllabus by googling the course, you'll be working with Go instead of Java now and instead doing a course-long project with 4 milestones you're simply working on labs.
+
+This was one of the most time-consuming courses in it's previous form, and knowing Goel's penchant for making really time-consuming courses (like he did for ECE454 before Jon Eyolfson took over), I would be wary of taking this course in a busy semester.
+
+<Callout type="destructive">
+  *This review is currently under construction!*
+</Callout>
+
+<hr/>
+
+## Distributed Systems (ECE419)
+
+### TL;DR
+
+The course was completely overhauled this year by Ashvin Goel after being practically identical for the past 15 years. You can find the new syllabus by googling the course, you'll be working with Go instead of Java now and instead doing a course-long project with 4 milestones you're simply working on labs.
+
+This was one of the most time-consuming courses in it's previous form, and knowing Goel's penchant for making really time-consuming courses (like he did for ECE454 before Jon Eyolfson took over), I would be wary of taking this course in a busy semester.
+
+<Callout type="destructive">
+  *This review is currently under construction!*
+</Callout>
+
+<hr/>
+
+## Software Engineering (ECE444)
+
+<Callout type="destructive">
+  *This review is currently under construction!*
+</Callout>
+
+<hr/>
+
+## Artificial Intelligence Fundamentals (APS360)
+
+<Callout type="destructive">
+  *This review is currently under construction!*
+</Callout>
+
+<hr/>
+
+## Introduction to Artificial Intelligence (CSC384)
+
+<Callout type="destructive">
+  *This review is currently under construction!*
+</Callout>
+
+<hr/>
+
+## Introduction to Machine Learning (ECE421)
+
+<Callout type="destructive">
+  *This review is currently under construction!*
+</Callout>
+
+<hr/>
+
+## Probability and Applications (ECE302)
+
+<Callout type="destructive">
+  *This review is currently under construction!*
+</Callout>
+
+<hr/>
+
+## ECE302
+
+<Callout type="destructive">
+  *This review is currently under construction!*
+</Callout>
+
+<hr/>
+
+## ECE361
+
+<Callout type="destructive">
+  *This review is currently under construction!*
+</Callout>
+
+<hr/>
+
+## TEP444/TEP442
+
+<Callout type="destructive">
+  *This review is currently under construction!*
+</Callout>
+
+<hr/>
+
+## TEP343
+
+<Callout type="destructive">
+  *This review is currently under construction!*
+</Callout>
+
+<hr/>
+
+## CIV220
+
+<Callout type="destructive">
+  *This review is currently under construction!*
+</Callout>
+
+<hr/>
+
+## ENT200
+
+<Callout type="destructive">
+  *This review is currently under construction!*
+</Callout>
