update: upper year courses post

--- a/src/content/posts/2025-01-25-uoft-ece-upper-year-course-planning-tips/index.mdx
+++ b/src/content/posts/2025-01-25-uoft-ece-upper-year-course-planning-tips/index.mdx
@@ -23,11 +23,11 @@ I've taken a lot of courses from my time in UofT ECE (most of them were about so
   - 1st year ECE students and potential applicants trying to figure out what they can learn from their degree
 
 <Callout type="info" classes="border-grey-950/100 bg-grey-100 dark:border-grey-100/100 dark:bg-grey-950">
-  *Disclaimer:* I'm a software guy, which means that when it comes to ECE courses at UofT my interests lie solely in areas 6 (computer software) and 5 (computer hardware and computer networks). I've gone through almost all the area 6 courses and some of the area 5 courses so I can speak about them at length (along with some others), but if you're interested in more of the electrical and hardware side of things I strongly recommend reaching out to students who have taken those courses (on Discord, LinkedIn, on-campus) and learn from them firsthand about what they're like.
+  **Disclaimer:** I'm a software guy, which means that when it comes to ECE courses at UofT my interests lie solely in areas 6 (computer software) and 5 (computer hardware and computer networks). I've gone through almost all the area 6 courses and some of the area 5 courses so I can speak about them at length (along with some others), but if you're interested in more of the electrical and hardware side of things I strongly recommend reaching out to students who have taken those courses (on Discord, LinkedIn, on-campus) and learn from them firsthand about what they're like.
 </Callout>
 
 <Callout type="destructive">
-  *This page is currently still under construction!*
+  **This page is currently still under construction!**
 
   Check back on January 29 for any incomplete course reviews.
 </Callout>
@@ -82,6 +82,23 @@ Take it in fall for the better lectures, overall better organization, and to hel
 
 <hr/>
 
+## Probability and Applications (ECE302)
+
+<Callout type="destructive">
+  *This review is currently under construction!*
+</Callout>
+
+<hr/>
+
+
+## ECE361
+
+<Callout type="destructive">
+  *This review is currently under construction!*
+</Callout>
+
+<hr/>
+
 ## Introduction to Databases (CSC343)
 
 ### TL;DR
@@ -99,6 +116,28 @@ A few homework assignments with a mix of writing relational algebra and Python/P
 ### When to take it
 
 The course is virtually identical in both fall and winter, so you have the freedom of selecting which semester is best for you to take it. Some co-op positions (e.g. fullstack) will value experience with databases so it can be a handy course to have for interviews. For other positions it won't be of much value beyond being good to know.
+
+<hr/>
+
+## Introduction to Artificial Intelligence (CSC384)
+
+<Callout type="destructive">
+  *This review is currently under construction!*
+</Callout>
+
+<hr/>
+
+
+## Artificial Intelligence Fundamentals (APS360)
+
+
+<hr/>
+
+## Introduction to Machine Learning (ECE421)
+
+<Callout type="destructive">
+  *This review is currently under construction!*
+</Callout>
 
 <hr/>
 
@@ -126,7 +165,7 @@ The course is virtually identical in both fall and winter, so you have the freed
 
 ### TL;DR
 
-This course is one of the least useful out of all those offered in area 6 (and I'm including that new quantum computing course and ece444 which is ridiculously easy too), I don't really recommend it because it's a mishmash of a bunch of different concepts in computing like functional programming, Haskell, Prolog, and some OOP. The positions where this comes in handy are a small minority of all those out there, and especially so if you're looking for co-op positions. Even if you've taken every single course in area 6. The only saving grace of this course (and why you might consider taking it) is that you can get a high mark in it fairly easily. Disclaimer though: no professor who's taught the course has stayed beyond a single semester for like the past 3 years (dear god, I have stories of this one prof named Subhendu Bhadra), so teaching ability is very much a variable thing (although you can probably expect it to be substandard). If you really want to learn the content in this course, google the syllabus, look at the notes, and just search up the content on YouTube. And take a different course in undegrad instead.
+This course is one of the least useful out of all those offered in area 6 (and I'm including that new quantum computing course and ECE444 too), I don't really recommend it because it's a mishmash of a bunch of different concepts in computing like functional programming, Haskell, Prolog, and some OOP. The positions where this comes in handy are a small minority of all those out there, and especially so if you're looking for co-op positions. Even if you've taken every single course in area 6. The only saving grace of this course (and why you might consider taking it) is that you can get a high mark in it fairly easily. Disclaimer though: no professor who's taught the course has stayed beyond a single semester for like the past 3 years (dear god, I have stories of this one prof named Subhendu Bhadra), so teaching ability is very much a variable thing (although you can probably expect it to be substandard). If you really want to learn the content in this course, google the syllabus, look at the notes, and just search up the content on YouTube. And take a different course in undegrad instead.
 
 <hr/>
 
@@ -138,78 +177,38 @@ The course was completely overhauled this year by Ashvin Goel after being practi
 
 This was one of the most time-consuming courses in it's previous form, and knowing Goel's penchant for making really time-consuming courses (like he did for ECE454 before Jon Eyolfson took over), I would be wary of taking this course in a busy semester.
 
-<Callout type="destructive">
-  *This review is currently under construction!*
+### What this course used to be like in the past
+
+One of the most time-consuming courses in undergrad, the course primarily consisted of a semester-long project where you actually build a distributed database from scratch using Java in a team of 3.
+
+<Callout type="info" icon="lucide:star" classes="border-yellow-950/100 bg-yellow-100 dark:border-yellow-100/100 dark:bg-yellow-950">
+  Here's the project me and my team worked on for ECE419 in 2024: https://github.com/sadmanca/eagerDB
+  
+  The whole project thing in ECE419 is actually really cool (despite it being overwhelmingly time-consuming it's nice to have something to show for all of it), I think it's a real bummer Goel got rid of it when he overhauled the course.
 </Callout>
 
-<hr/>
+Despite the project taking up practically 80% of your time in the course, it only consisted of 30-40% of your grade, and because it was so time-consuming it meant that you hardly had enough time to study for the midterm and exam (thankfully both were relatively straightforward, despite the midterm being an assessment on Quercus that you had to write in a computer lab, supervised and without any internet access except for access to course resources on Quercus). I can't stress enough how painfully time-consuming this course was, especially at the start of it when you're building the core foundation of your application.
 
-## Distributed Systems (ECE419)
+Another great thing about this course is that it gives you a chance to use what you learned about threads and file systems/data structures from ECE344 and networks (socket programming) from ECE361 in a decently-sized application. You don't get that from the biweekly labs in either course, so it's nice to get that experience so you can talk about in your interviews.
 
-### TL;DR
-
-The course was completely overhauled this year by Ashvin Goel after being practically identical for the past 15 years. You can find the new syllabus by googling the course, you'll be working with Go instead of Java now and instead doing a course-long project with 4 milestones you're simply working on labs.
-
-This was one of the most time-consuming courses in it's previous form, and knowing Goel's penchant for making really time-consuming courses (like he did for ECE454 before Jon Eyolfson took over), I would be wary of taking this course in a busy semester.
-
-<Callout type="destructive">
-  *This review is currently under construction!*
+<Callout type="info">
+  *Fun fact:* my manager from my internship in fall 2024 hired me *specifically* because of my project work from ECE419, which goes to show how helpful specialized courses can be for landing niche positions.
 </Callout>
 
 <hr/>
 
 ## Software Engineering (ECE444)
 
-<Callout type="destructive">
-  *This review is currently under construction!*
+<Callout type="warning">
+  I haven't taken this course yet, so I can only speak about what I've heard from others and what I've seen about the course posted online.
 </Callout>
 
-<hr/>
+ECE444 used to be a really easy course that had no midterm, no final, and practically no work; it was really easy to get a really high mark in it (it was a GPA booster). Unfortunately with the current fall professor, that's just not the case any more, which largely negates the entire point as to why you'd want to take the course.
 
-## Artificial Intelligence Fundamentals (APS360)
+In general, what you learn about in ECE444 is more along the lines of product/project management for software projects more than actual software engineering (important, mind you, but definitely not as technical as you might expect from other area 6 software courses). You also touch on a lot of important topics like Docker, microservices, and design patterns (in fact one of the things you'll be doing in this course is actually creating and hopefully merging a PR to an open-source project on GitHub), but practically speaking now that the course isn't as bird as it used to be you're far better off learning about these topics online (in a more rigorous manner instead of just being told what they are).
 
-<Callout type="destructive">
-  *This review is currently under construction!*
-</Callout>
-
-<hr/>
-
-## Introduction to Artificial Intelligence (CSC384)
-
-<Callout type="destructive">
-  *This review is currently under construction!*
-</Callout>
-
-<hr/>
-
-## Introduction to Machine Learning (ECE421)
-
-<Callout type="destructive">
-  *This review is currently under construction!*
-</Callout>
-
-<hr/>
-
-## Probability and Applications (ECE302)
-
-<Callout type="destructive">
-  *This review is currently under construction!*
-</Callout>
-
-<hr/>
-
-## ECE302
-
-<Callout type="destructive">
-  *This review is currently under construction!*
-</Callout>
-
-<hr/>
-
-## ECE361
-
-<Callout type="destructive">
-  *This review is currently under construction!*
+<Callout type="info">
+  You can also check out the 2020F course website for ECE444 to look at the lecture slides and lab assignments: https://www.eecg.utoronto.ca/~shuruiz/teaching/ECE444-2020F/
 </Callout>
 
 <hr/>
@@ -230,15 +229,14 @@ This was one of the most time-consuming courses in it's previous form, and knowi
 
 <hr/>
 
-## CIV220
+## ENT200
 
 <Callout type="destructive">
   *This review is currently under construction!*
 </Callout>
-
 <hr/>
 
-## ENT200
+## CIV220 (also a bit on CIV300)
 
 <Callout type="destructive">
   *This review is currently under construction!*
